--- a/templates/bookprice.html
+++ b/templates/bookprice.html
@@ -2,8 +2,29 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
+	<script type="text/javascript" src="../static/js/jquery.min.js"></script>
+	<script type="text/javascript" src="../static/js/knockout-3.3.0.js"></script>
 </head>
 <body>
-	<h1>Test for aws</h1>
+	<p>First name: <input data-bind="value: firstName" /></p>
+	<p>Last name: <input data-bind="value: lastName"></p>
+	<h2><span data-bind="text: fullName"></span>!</h2>
 </body>
+	<script type="text/javascript">
+		$(function(){
+
+			var ViewModel = function(first, last) {
+			    this.firstName = ko.observable(first);
+			    this.lastName = ko.observable(last);
+			 
+			    this.fullName = ko.pureComputed(function() {
+
+			        return this.firstName() + " " + this.lastName();
+			    }, this);
+			};
+ 
+			ko.applyBindings(new ViewModel("Planet", "Earth"));
+		});
+	</script>
 </html>
+
