--- a/templates/bookprice.html
+++ b/templates/bookprice.html
@@ -15,7 +15,7 @@
         </div>
         <div data-role="content">
 
-			<p><input data-bind='value: ShouYinShu, valueUpdate: "afterkeydown"' placeholder="首印数"/></p>
+			<p><input type="number" data-bind='value: ShouYinShu, valueUpdate: "afterkeydown"' placeholder="首印数"/></p>
 			<p><input data-bind='value: BanShuiLv, valueUpdate: "afterkeydown"' placeholder="版税率(%)" ></p>
 
 			<p><input data-bind='value: YuFuKuan, valueUpdate: "afterkeydown"' placeholder="预付款" ></p>
