--- a/templates/bookprice.html
+++ b/templates/bookprice.html
@@ -2,9 +2,9 @@
 <head>
 	<meta charset="UTF-8">
 	<title>汇率</title>
-    <link rel="stylesheet" href="http://apps.bdimg.com/libs/jquerymobile/1.4.3/jquery.mobile-1.4.3.min.css" />
-    <script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
-    <script  src="http://apps.bdimg.com/libs/jquerymobile/1.4.3/jquery.mobile-1.4.3.min.js"></script>
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.css" />
+    <script src="http://code.jquery.com/jquery-1.4.3.min.js"></script>
+    <script src="http://code.jquery.com/mobile/1.0a1/jquery.mobile-1.0a1.min.js"></script>
 	<script type="text/javascript" src="../static/js/knockout-3.3.0.js"></script>
 
 </head>
@@ -96,6 +96,7 @@
 			var bookZheKou =parseFloat(self.ZheKou);
 
 
+			var bookPrice =
 			return bookShouYinShu + bookZheKou;
 
 		    });
